--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Påskeferien min</title>
-    <link rel="stylesheet" href="../CSS/påskeferie.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <h1>Min påskeferie og hva jeg har gjort</h1>
