--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <h1>Min påskeferie og hva jeg har gjort</h1>
     
     <h2>I ferien har jeg sovet</h2>
-    <img src="../Bilder/man som sover.webp" alt="">
+    <img src="../man som sover.webp" alt="">
     <h2>I ferien har jeg Spilt</h2>
-    <img src="../Bilder/kohli playing gamesl.webp" alt="">
+    <img src="../kohli playing gamesl.webp" alt="">
     <h2>I ferien har jeg trent</h2>
-    <img src="../Bilder/a man traing 2.png" alt="">
+    <img src="../a man traing 2.png" alt="">
     <h2>I ferien har jeg spist mye god mat</h2>
-    <img src="../Bilder/man eating good food.png" alt="">
+    <img src="../man eating good food.png" alt="">
     <h2>Jeg har jobbet litt i tilegg</h2>
-    <img src="../Bilder/man working on engine.png" alt="">
+    <img src="../man working on engine.png" alt="">
 </body>
 </html>
